/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
  * source/rdd/dbfntx/dbfntx1.c
    * WHILE, etc, conditions support implemented (DBFNTX )

2002-01-17 14:15 UTC-0500 David G. Holm <dholm@jsd-llc.com>
  * contrib/Makefile
    + Added platform checks to determine which libraries to build.

  * include/hbver.h
    * Identify what my OS/2 38.1 builds are based on.

2002-01-17 21:50 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rdd/dbfntx/dbfntx1.c
  * source/rdd/dbcmd.c
    ! a bug fixed, related to conditional indexing

2002-01-17 15:32 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rdd/dbfntx/dbfntx1.c
  * include/hbrddntx.h
    * FOR condition support implemented ( DBFNTX )

2002-01-16 00:14 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * common/hbgete.c
    ! fixed warning on DosScanEnv() call

2002-01-16 17:21 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx1.c
     * fixed some simple warnings by bcc32 (with -w)
     * fixed 3 bugs with index not updating the tree

2002-01-16 11:10 UTC-0500 David G. Holm <dholm@jsd-llc.com>
  * contrib/libct/charsort.c
    ! OS/2 IBM C++ fix.

2002-01-16 05:00 UTC+0700 Andi Jahja <harbour@cbn.net.id>
   * source/rtl/typefile.prg
     * cBuffer not initialized, fixed.

2002-01-16 00:44 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * common/hbffind.c
    ! DosFindFirst() call on OS/2 section of file was wrong (parameter findcount was not
      set to any correct value)
      NOTE: OS/2 builds of Alpha 38 _are broken_ because of this bug

2002-01-15 22:30 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * contrib/rdd_ads/ads1.c
    * Added virtual method adsExit() with a call of AdsApplicationExit()

2002-01-15 20:40 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/pp/ppcore.c